# sygnal

./: .coverage  .dockerignore  .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  RELEASING.md  TROUBLESHOOTING.md  dependencies.py  gunicorn_config.py.sample  mypy.ini  pyproject.toml  run.txt  setup.cfg  setup.py  sygnal.conf.sample  sygnal.py  sygnal.yaml  sygnal.yaml.original  sygnal.yaml.sample  tox.ini
.buildkite/: pipeline.yml
.github/workflows/: changelog_check.yml  docker_check.yml  docker_push.yml  pipeline.yml
changelog.d/: 100.bugfix  110.doc  112.feature  114.feature  122.bugfix  125.misc  126.doc  127.feature  130.feature  131.misc  132.feature  133.misc  134.misc  135.misc  139.bugfix  141.docker  145.feature  146.feature  149.misc  150.doc  151.misc  154.doc  155.doc  157.bugfix  158.doc  159.misc  172.bugfix  174.misc  177.doc  177.feature  178.misc  179.bugfix  180.bugfix  181.bugfix  182.feature  184.bugfix  185.bugfix  188.doc  193.doc  193.misc  (+125 more)
contrib/grafana/: README.md  Sygnal.json
docker/: Dockerfile
docs/: applications.md  troubleshooting.md
htmlcov/: index.html  status.json  sygnal___init___py.html  sygnal_apnspushkin_py.html  sygnal_apnstruncate_py.html  sygnal_exceptions_py.html  sygnal_gcmpushkin_py.html  sygnal_helper___init___py.html  sygnal_helper_context_factory_py.html  sygnal_helper_proxy___init___py.html  sygnal_helper_proxy_connectproxyclient_twisted_py.html  sygnal_helper_proxy_proxy_asyncio_py.html  sygnal_helper_proxy_proxyagent_twisted_py.html  sygnal_http_py.html  sygnal_notifications_py.html  sygnal_sygnal_py.html  sygnal_utils_py.html  sygnal_webpushpushkin_py.html
matrix_sygnal/: apnspushkin.py  gcmpushkin.py  http.py  notifications.py  sygnal.py  utils.py  webpushpushkin.py
matrix_sygnal/helper/: context_factory.py
matrix_sygnal/helper/proxy/: connectproxyclient_twisted.py  proxy_asyncio.py  proxyagent_twisted.py
scripts-dev/: check_newsfragment.sh  lint.sh  old_deps.py
scripts-dev/proxy-test/: curl.sh  docker-compose.yml  nginx.conf  notification-gcm.json  notification-ios.json  notification.json  proxy.conf  service_account.json  setup.sh  sygnal-with-curl.Dockerfile  sygnal.yaml
scripts-dev/proxy-test/responses/: oauth2_googleapis_token.json
stubs/google/auth/: __init__.pyi  _default.pyi
stubs/google/auth/transport/: __init__.pyi
stubs/google/oauth2/: __init__.pyi  service_account.pyi
stubs/opentracing/: __init__.pyi  logs.pyi  span.pyi  tags.pyi
stubs/twisted/web/: http.pyi
sygnal/: __init__.py  apnspushkin.py  apnstruncate.py  database.py  db.py  dummy_receiver.py  dummypushkin.py  exceptions.py  fcmpushkin.py  firebasepushkin.py  gcmpushkin.py  http.py  mqttpushkin.py  notifications.py  sygnal.py  utils.py  webpushpushkin.py
sygnal/helper/: asyncio_connectprotocol.py  context_factory.py  proxyagent.py  twisted_connectproxyclient.py  twisted_proxyagent.py
sygnal/helper/proxy/: __init__.py  connectproxyclient_twisted.py  proxy_asyncio.py  proxyagent_twisted.py
tests/: asyncio_test_helpers.py  test_apns.py  test_apnstruncate.py  test_concurrency_limit.py  test_fcm.py  test_firebase.py  test_gcm.py  test_http.py  test_httpproxy_asyncio.py  test_httpproxy_twisted.py  test_proxy_url_parsing.py  test_pushgateway_api_v1.py  test_utils.py  test_webpush.py  testutils.py  twisted_test_helpers.py
tests/webpush/: private_key.pem
